# taminus

./: .gitignore  .readthedocs.yml  CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  build.sh  main.py  pyproject.toml
.github/workflows/: python-publish.yml
actixpy/: app.py  test_rust_bridge.py
actixpy-core/: Cargo.toml
actixpy-core/actixpy-core/: Cargo.toml
actixpy-core/src/: lib.rs
docs/source/: conf.py  index.rst
example/: example1.py  main.py
example/simple/: main.py  views.py
src/taminus/: __init__.py  main.py  status.py  utils.py
src/terminus/: __init__.py  taminus.py  utils.py
