[build-system]
requires = ["maturin>=1.0,<2.0"] # Ensure this is a recent version of maturin
build-backend = "maturin"

[project]
name = "actixpy" # This will be the name of the pip package
version = "0.1.0"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
manifest-path = "actixpy-core/Cargo.toml"
