[package]
name = "actixpy-core"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "0.14", features = ["server", "http1", "tcp"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
pyo3 = { version = "0.20.0", features = ["extension-module"] }

[lib]
name = "actixpy_core"
crate-type = ["cdylib"]
